configs/mlflow/mlflow.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-tracking
  namespace: mlflow
spec:
  selector:
    app: mlflow-tracking
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-tracking
  namespace: mlflow
  labels:
    app: mlflow-tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-tracking
  template:
    metadata:
      labels:
        app: mlflow-tracking
    spec:
      containers:
      - name: mlflow-server
        image: learningandintelligentsystems/mlflow-tracking
        command: ["mlflow"]
        args: ["server",
               "--backend-store-uri", "$(MLFLOW_TRACKING_URI)",
               "--default-artifact-root", "s3://mlflow",
               "--host", "0.0.0.0"]
        ports:
        - containerPort: 5000
