configs/mlflow/mlflow-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: external-auth-oauth2
  namespace: mlflow
spec:
  rules:
  - host: lis-ml.csail.mit.edu
    http:
      paths:
      - backend:
          serviceName: mlflow-tracking
          servicePort: 80
        path: /
  tls:
  - hosts:
      - lis-ml.csail.mit.edu
    secretName: lis-ml-csail-mit-edu

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: mlflow
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: lis-ml.csail.mit.edu
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
      - lis-ml.csail.mit.edu
    secretName: lis-ml-csail-mit-edu
